shell: use variables to configure JVM on run local
Update 839ddf3e11baee6e6dd22abd7042c1ef83f15c34 ("shell: add variable to
configure farm JVM") to remove the "farm." prefix from the variable
names and make them part of the global configuration variables.
They should also be used to configure the JVM for local DPE.